manifests/telemetry/base/collector/collector-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: collector
  labels:
    app.kubernetes.io/name: collector
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: collector
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: collector
    spec:
      serviceAccountName: collector
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: otelcol
          image: opentelemetry-collector-k8s:TO_BE_FILLED
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          args:
            - --config
            - /etc/otelcol/config.yaml
          ports:
            - name: healthz
              containerPort: 13133
            - name: otlp-grpc
              containerPort: 4317
            - name: otlp-http
              containerPort: 4318
          resources:
            limits:
              memory: 512Mi
              cpu: 100m
            requests:
              memory: 128Mi
              cpu: 100m
          livenessProbe:
            httpGet:
              path: /
              port: healthz
          readinessProbe:
            httpGet:
              path: /
              port: healthz
          volumeMounts:
            - name: config
              mountPath: /etc/otelcol
      volumes:
        - name: config
          configMap:
            name: collector-config
