manifests/telemetry/base/collector/target-allocator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target-allocator
  labels:
    app.kubernetes.io/name: opentelemetry-target-allocator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: opentelemetry-target-allocator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: opentelemetry-target-allocator
    spec:
      serviceAccountName: target-allocator
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: target-allocator
          image: opentelemetry-target-allocator:TO_BE_FILLED
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /conf/
              readOnly: true
          livenessProbe:
            httpGet:
              path: /livez
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 64Mi
      volumes:
        - name: config
          configMap:
            name: target-allocator-config
