manifests/telemetry/base/collector/collector.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: collector
  labels:
    app.kubernetes.io/name: collector
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: collector
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: collector
    spec:
      serviceAccountName: collector
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: otelcol
          image: opentelemetry-collector-k8s:TO_BE_FILLED
          imagePullPolicy: IfNotPresent
          args:
            - --config
            - /etc/otelcol/config.yaml
          volumeMounts:
            - mountPath: /etc/otelcol
              name: config
              readOnly: true
          ports:
            - name: healthz
              containerPort: 13133
            - name: otlp-grpc
              containerPort: 4317
            - name: otlp-http
              containerPort: 4318
            - name: otlp-local-grpc
              containerPort: 14317
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              memory: 400Mi
              cpu: 100m
            requests:
              memory: 320Mi # 80% of limit
              cpu: 100m
          livenessProbe:
            httpGet:
              path: /
              port: healthz
          readinessProbe:
            httpGet:
              path: /
              port: healthz
      volumes:
        - name: config
          configMap:
            name: collector-config
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: collector
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: collector
  ingress:
    - fromEntities: [cluster]
      toPorts:
        - ports:
            - port: otlp-grpc
              protocol: TCP
            - port: otlp-http
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: host-collector
      toPorts:
        - ports:
            - port: otlp-local-grpc
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: otlp
spec:
  selector:
    app.kubernetes.io/name: collector
  internalTrafficPolicy: Local
  ports:
    - name: grpc
      appProtocol: kubernetes.io/h2c
      port: 4317
      targetPort: otlp-grpc
    - name: http
      port: 4318
      targetPort: otlp-http
    - name: grpc-local
      port: 14317
      targetPort: otlp-local-grpc
      protocol: TCP
