manifests/telemetry/base/collector/host-collector.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: host-collector
  labels:
    app.kubernetes.io/name: host-collector
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: host-collector
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: host-collector
    spec:
      serviceAccountName: host-collector
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: otelcol
          image: opentelemetry-collector-k8s:TO_BE_FILLED
          imagePullPolicy: IfNotPresent
          args:
            - --config
            - /etc/otelcol/config.yaml
          volumeMounts:
            - mountPath: /etc/otelcol
              name: config
              readOnly: true
            - mountPath: /var/lib/otelcol
              name: data
            - mountPath: /var/log/pods
              name: pod-logs
              readOnly: true
          ports:
            - name: healthz
              containerPort: 13133
          securityContext:
            runAsUser: 0
            runAsGroup: 0
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              memory: 100Mi
              cpu: 50m
            requests:
              memory: 80Mi
              cpu: 50m
          livenessProbe:
            httpGet:
              path: /
              port: healthz
          readinessProbe:
            httpGet:
              path: /
              port: healthz
      volumes:
        - name: config
          configMap:
            name: host-collector-config
            items:
              - key: config.yaml
                path: config.yaml
        - name: data
          hostPath:
            type: DirectoryOrCreate
            path: /var/lib/kube/host-collector
        - name: pod-logs
          hostPath:
            path: /var/log/pods
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: host-collector
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: host-collector
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: collector
      toPorts:
        - ports:
            - port: otlp-local-grpc
              protocol: TCP
