manifests/telemetry/base/collector/otlp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otlp
spec:
  selector:
    app.kubernetes.io/name: collector
  internalTrafficPolicy: Local
  ports:
    - name: grpc
      port: 4317
      targetPort: otlp-grpc
    - name: http
      port: 4318
      targetPort: otlp-http
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: collector
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: collector
  ingress:
    - fromEntities: [cluster]
      toPorts:
        - ports:
          - port: otlp-grpc
            protocol: TCP
          - port: otlp-http
            protocol: TCP
